--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@
   transform: translate(-50%, -50%);
   width: 20px;
   height: 20px;
-  background-color: white;
+  background-color: white !important;
   border-radius: 50%;
   opacity: 0;
   transition: all 0.8s cubic-bezier(0.23, 1, 0.320, 1);
@@ -142,5 +142,10 @@
   text-align: center;
 }
 .display-block {
-  display: block;
+  display: block !important;
+}
+.video video {
+  text-align: center;
+  display: inline-block;
+  width: 80%;
 }
