--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   font-size: 16px;
   padding: 10px 10px 10px 5px;
   display: block;
-  width: 200px;
+  width: 100%;
   border: none;
   border-bottom: 1px solid #515151;
   background: transparent;
@@ -39,29 +39,30 @@
 
 .wave-group .label-char {
   transition: 0.2s ease all;
-  transition-delay: calc(var(--index) * .05s);
+  transition-delay: calc(var(--index) * 0.05s);
 }
 
 .wave-group .input:focus ~ label .label-char,
 .wave-group .input:valid ~ label .label-char {
   transform: translateY(-20px);
   font-size: 14px;
-  color: #5264AE;
+  color: #5264ae;
 }
 
 .wave-group .bar {
   position: relative;
   display: block;
-  width: 200px;
+  width: 100%;
 }
 
-.wave-group .bar:before,.wave-group .bar:after {
-  content: '';
+.wave-group .bar:before,
+.wave-group .bar:after {
+  content: "";
   height: 2px;
   width: 0;
   bottom: 1px;
   position: absolute;
-  background: #5264AE;
+  background: #5264ae;
   transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -webkit-transition: 0.2s ease all;
@@ -92,12 +93,12 @@
   box-shadow: 0 0 0 2px white;
   cursor: pointer;
   overflow: hidden;
-  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .animated-button span:last-child {
   position: absolute;
-  
+
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -106,7 +107,7 @@
   background-color: white !important;
   border-radius: 50%;
   opacity: 0;
-  transition: all 0.8s cubic-bezier(0.23, 1, 0.320, 1);
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .animated-button span:first-child {
@@ -148,4 +149,22 @@
   text-align: center;
   display: inline-block;
   width: 80%;
+}
+
+.app-background {
+  background-color: #242424;
+}
+
+.question-container {
+  width: 90%;
+  max-width: 1100px;
+  margin: 120px 0;
+  position: relative;
+}
+
+.questionnaire-container {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
 }
